kube2/portal.yaml
apiVersion: v1
kind: Service
metadata:
  name: siacdn-portal
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: siacdn-portal
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: siacdn-portal
spec:
  selector:
    matchLabels:
      app: siacdn-portal
  replicas: 3
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: siacdn-portal
    spec:
      containers:
      - name: nginx
        image: ericflo/siacdn-nginx:latest
        imagePullPolicy: Always
        command: ["/etc/skynet/start-portal.sh"]
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "125m"
          limits:
            memory: "500Mi"
            cpu: "500m"
