kube2/uploader.yaml
apiVersion: v1
kind: Service
metadata:
  name: siacdn-uploader
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: siacdn-uploader
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: siacdn-uploader
spec:
  selector:
    matchLabels:
      app: siacdn-uploader
  serviceName: "siacdn-uploader"
  replicas: 1
  template:
    metadata:
      labels:
        app: siacdn-uploader
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: sia
        image: ericflo/siacdn-viewnode:latest
        imagePullPolicy: Always
        command: ["siad-wrapper.sh", "-d", "/etc/sia"]
        ports:
        - containerPort: 9980
        volumeMounts:
        - name: sia-uploader
          mountPath: /etc/sia
        resources:
          requests:
            memory: "2Gi"
            cpu: "250m"
          limits:
            memory: "8Gi"
            cpu: "6500m"
      - name: nginx
        image: ericflo/siacdn-nginx:latest
        imagePullPolicy: Always
        command: ["/etc/skynet/start-uploader.sh"]
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: sia-uploader
          mountPath: /etc/sia
        resources:
          requests:
            memory: "256Mi"
            cpu: "125m"
          limits:
            memory: "500Mi"
            cpu: "500m"
  volumeClaimTemplates:
  - metadata:
      name: sia-uploader
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 50Gi
